--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -14,9 +14,9 @@ DEADLINE: <2021-04-18 周日 23:00 +1w> SCHEDULED: <2021-04-17 周六 09:00 +1w>
 :END:
 - State "DONE"       from "TODO"       [2021-04-10 周六 13:45] \\
   1. 每个月通过大壮名城物业缴纳电费, 水+物业费. 今天水+物业费有103元的残余, 和房东约定这个月我来缴, 明年的4月份房东来缴纳.
-  2. 房间里的马桶坏了, 电磁炉可能坏了.
+  2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
-** WAIT [#B] 购买家具用品 [77%]                                  :shopping:
+** WAIT [#B] 购买家具用品 [75%]                                  :shopping:
 SCHEDULED: <2021-05-10 Mon 09:00>
 :PROPERTIES:
 :BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
@@ -43,9 +43,10 @@ SCHEDULED: <2021-05-10 Mon 09:00>
  - [X] 闹钟 ::
  - [X] 五号电池 ::
  - [X] 脚盆 ::
- - [X] 多功能衣架 :: 
- - [ ] 桌子 :: 
+ - [X] 多功能衣架 ::
+ - [ ] 蚊帐 :: 
  - [ ] 床头柜 ::
+ - [ ] 桌子 :: 
  - [ ] 人体工学椅子 ::
  - [ ] 普通凳子 ::
  - [ ] 置物架 ::
@@ -53,7 +54,6 @@ SCHEDULED: <2021-05-10 Mon 09:00>
 ** WAIT [#C] 从家里把需要的物品邮寄过来 [0/4]                       :event:
 DEADLINE: <2021-06-01 周二>
 :PROPERTIES:
-:BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
 :END:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:25] \\
   先不急, 电脑什么都没得
@@ -64,7 +64,6 @@ DEADLINE: <2021-06-01 周二>
 ** WAIT [#C] 办理电信宽带业务                                       :event:
 SCHEDULED: <2021-04-10 周六 13:20>
 :PROPERTIES:
-:BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
 :END:
 - State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
   暂时没需求.
@@ -120,6 +119,8 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 :ARCHIVE_TIME: 2021-04-11 周日 21:43
 :END:
 * Appointment
+** TODO [#C] 大扫除                                                 :event:
+SCHEDULED: <2021-04-12 周一 23:00>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
