--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -16,41 +16,66 @@ DEADLINE: <2021-04-18 周日 23:00 +1w> SCHEDULED: <2021-04-17 周六 09:00 +1w>
   1. 每个月通过大壮名城物业缴纳电费, 水+物业费. 今天水+物业费有103元的残余, 和房东约定这个月我来缴, 明年的4月份房东来缴纳.
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
-** WAIT [#B] 购买家具用品 [75%]                                  :shopping:
+** WAIT [#B] 购买家具用品 [81%]                                  :shopping:
 SCHEDULED: <2021-05-10 Mon 09:00>
 :PROPERTIES:
 :BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
 :COOKIE_DATA: checkbox recursive
 :ORDERED: nil
 :END:
- - [X] 床褥 :: 
- - [X] 牙具 [3/3]
-   - [X] 牙膏 
-   - [X] 牙刷
-   - [X] 牙缸
- - [X] 剪刀 :: 
- - [X] 水果刀 :: 
- - [X] 电热水壶 :: 
- - [X] 水杯 :: 
- - [X] 拖布 :: 
- - [X] 扫把和簸箕 :: 
- - [X] 自行车水杯 :: 
- - [X] 鞋刷 ::
- - [X] 硬板鞋垫 :: 无异味
- - [X] 床头灯 ::
- - [X] 落地衣架 ::
- - [X] 衣架 ::
- - [X] 闹钟 ::
- - [X] 五号电池 ::
- - [X] 脚盆 ::
- - [X] 多功能衣架 ::
- - [ ] 蚊帐 :: 
- - [ ] 床头柜 ::
- - [ ] 桌子 :: 
- - [ ] 人体工学椅子 ::
- - [ ] 普通凳子 ::
- - [ ] 置物架 ::
- - [ ] 多功能螺丝套件 :: 
+- [X] 床上用品 [7/7]
+  - [X] 床褥 ::
+  - [X] 被子 ::
+  - [X] 被套 :: 
+  - [X] 枕套 :: 
+  - [X] 枕头 :: 
+  - [X] 床单 ::
+  - [X] 床刷 :: 
+- [X] 洗涤用品 [21/21]
+  - [X] 洗衣液 ::
+  - [X] 洗衣盆 ::
+  - [X] 消毒液 :: 
+  - [X] 晾衣撑杆 :: 
+  - [X] 肥皂 ::
+  - [X] 沐浴液 :: 
+  - [X] 洗发露 :: 
+  - [X] 香皂 :: 
+  - [X] 拖布 :: 
+  - [X] 扫把和簸箕 :: 
+  - [X] 鞋刷 ::
+  - [X] 脚盆 ::
+  - [X] 落地衣架 ::
+  - [X] 衣架 ::
+  - [X] 多功能衣架 ::
+  - [X] 牙膏 ::
+  - [X] 牙刷 ::
+  - [X] 牙缸 ::
+  - [X] 卫生纸 :: 
+  - [X] 毛巾 ::
+  - [X] 抹布 :: 
+- [-] 厨具 [6/7]
+  - [X] 垃圾袋 ::
+  - [X] 垃圾桶 ::
+  - [X] 水果刀 ::
+  - [X] 电热水壶 :: 
+  - [X] 水杯 :: 
+  - [X] 剪刀 :: 
+  - [ ] 果盘 :: 
+- [-] 家具 [2/7]
+  - [X] 床头灯 ::
+  - [X] 挂钩 ::
+  - [ ] 床头柜 ::
+  - [ ] 桌子 :: 
+  - [ ] 人体工学椅子 ::
+  - [ ] 普通凳子 ::
+  - [ ] 置物架 ::
+- [-] 其他 [5/6]
+  - [X] 自行车水杯 :: 
+  - [X] 硬板鞋垫 :: 无异味
+  - [X] 闹钟 ::
+  - [X] 五号电池 ::
+  - [X] 电蚊香 :: 
+  - [ ] 多功能螺丝套件 :: 
 ** WAIT [#C] 从家里把需要的物品邮寄过来 [0/4]                       :event:
 DEADLINE: <2021-06-01 周二>
 :PROPERTIES:
@@ -119,8 +144,6 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 :ARCHIVE_TIME: 2021-04-11 周日 21:43
 :END:
 * Appointment
-** TODO [#C] 大扫除                                                 :event:
-SCHEDULED: <2021-04-12 周一 23:00>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
@@ -131,6 +154,9 @@ CLOSED: [2021-04-03 周六 12:00]
 :ARCHIVE_TIME: 2021-04-04 周日 21:20
 :END:
 <2021-04-03 Sat 10:00>
+** DONE [#C] 大扫除                                                 :event:
+CLOSED: [2021-04-13 周二 08:40] SCHEDULED: <2021-04-12 周一 23:00>
+- State "DONE"       from "TODO"       [2021-04-13 周二 08:40]
 * Project
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 自行车维护 [100%]                                     :event: 
