--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -17,13 +17,14 @@ SCHEDULED: <2021-04-19 周一 09:00 ++1w> DEADLINE: <2021-04-19 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-13 周二 19:00 ++1d> DEADLINE: <2021-04-13 周二 21:20 ++1d>
+SCHEDULED: <2021-04-14 周三 19:00 ++1d> DEADLINE: <2021-04-14 周三 21:20 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-12 周一 21:26]
+:LAST_REPEAT: [2021-04-13 周二 22:52]
 :END:
 
 
+- State "DONE"       from "TODO"       [2021-04-13 周二 22:52]
 - State "DONE"       from "TODO"       [2021-04-12 周一 21:26]
 - State "CANCELED"   from "TODO"       [2021-04-11 周日 18:53] \\
   放假
@@ -40,13 +41,14 @@ SCHEDULED: <2021-04-13 周二 19:00 ++1d> DEADLINE: <2021-04-13 周二 21:20 ++1
 - State "DONE"       from "TODO"       [2021-03-31 周三 20:50]
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-13 周二 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-04-14 周三 19:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-12 周一 13:25]
+:LAST_REPEAT: [2021-04-13 周二 08:56]
 :END:
+- State "DONE"       from "TODO"       [2021-04-13 周二 08:56]
 - State "DONE"       from "TODO"       [2021-04-12 周一 13:25]
 - State "DONE"       from "TODO"       [2021-04-11 周日 19:31]
 - State "DONE"       from "TODO"       [2021-04-10 周六 19:25]
@@ -85,12 +87,13 @@ DEADLINE: <2021-04-18 周日 23:00 ++1w> SCHEDULED: <2021-05-02 周日 06:00 ++1
   ------------------------------------------------
   5. 自行车从家里邮过来之后组好, 送到车店保养.
 ** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-13 周二 19:00 ++1d/2d>
+SCHEDULED: <2021-04-14 周三 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-12 周一 12:32]
+:LAST_REPEAT: [2021-04-13 周二 09:24]
 :END:
+- State "DONE"       from "TODO"       [2021-04-13 周二 09:24]
 - State "DONE"       from "TODO"       [2021-04-12 周一 12:32]
 - State "DONE"       from "TODO"       [2021-04-11 周日 19:24]
 - State "DONE"       from "TODO"       [2021-04-10 周六 22:15]
@@ -101,8 +104,8 @@ SCHEDULED: <2021-04-13 周二 19:00 ++1d/2d>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
-** TODO [#A] 学习UI制作经验分享                                     :learn:
-DEADLINE: <2021-04-13 周二 11:35> SCHEDULED: <2021-04-13 周二 09:00>
+** TODO [#A] 学习代码设计                                           :learn:
+DEADLINE: <2021-04-14 周三 21:00> SCHEDULED: <2021-04-14 周三 09:00>
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 学习org-edna                                          :learn:
 CLOSED: [2021-04-04 周日 11:46] DEADLINE: <2021-04-04 周日 12:00> SCHEDULED: <2022-04-03 周日 21:00>
@@ -186,6 +189,12 @@ CLOSED: [2021-04-11 周日 18:30] DEADLINE: <2021-04-11 周日 23:00> SCHEDULED:
 :ARCHIVE_TIME: 2021-04-11 周日 23:21
 :END:
 - State "DONE"       from "TODO"       [2021-04-11 周日 18:30]
+** DONE [#A] 学习UI制作经验分享                                     :learn:
+CLOSED: [2021-04-13 周二 10:21] DEADLINE: <2021-04-13 周二 11:35> SCHEDULED: <2021-04-13 周二 09:00>
+:PROPERTIES:
+:FILE:     [[file:../ref/liwei_engine.org::*UI规范][UI规范]]
+:END:
+- State "DONE"       from "TODO"       [2021-04-13 周二 10:21]
 * Appointment
 ** WAIT 组装一台性价比高的台式机用于开发和娱乐               :learn:future:
 DEADLINE: <2021-10-01 周五>
@@ -211,162 +220,6 @@ DEADLINE: <2021-10-01 周五>
 
 
 * Project
-** TODO [#A] 学习UI基础                                             :learn:
-DEADLINE: <2021-04-14 周三 21:00> SCHEDULED: <2021-04-09 周五 10:00>
-:PROPERTIES:
-:TYPE_ALL: basic advance
-:END:
-- State "DONE"       from "SCH"        [2021-04-12 周一 21:16]
-*** DONE UI编辑器入门
-CLOSED: [2021-04-09 周五 20:20] SCHEDULED: <2021-04-09 周五 10:50> DEADLINE: <2021-04-09 周五 21:00>
-:PROPERTIES:
-:TRIGGER:  olp("work.org" "Project/学习UI基础/基础控件学习/动态数据") todo!(TODO) scheduled!("++0h")
-:TYPE: basic
-:END:
-
-- State "DONE"       from "TODO"       [2021-04-09 周五 20:20]
-- State "DONE"       from "TODO"       [2021-04-09 周五 20:15]
-*** DONE 基础控件学习
-CLOSED: [2021-04-12 周一 19:59] DEADLINE: <2021-04-12 周一 11:35>
-:PROPERTIES:
-:TRIGGER:  olp("work.org" "Project/学习UI基础/自定义控件/Ani3动画") todo!(TODO) scheduled!("++0h")
-:TYPE: advance
-:END:
-- State "DONE"       from "WAIT"       [2021-04-12 周一 19:59]
-**** DONE 动态数据
-CLOSED: [2021-04-09 周五 20:21] SCHEDULED: <2021-04-09 周五 20:20>
-:PROPERTIES:
-:TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-09 周五 20:21]
-**** DONE 颜色层
-CLOSED: [2021-04-09 周五 21:43] SCHEDULED: <2021-04-09 周五 20:21>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-09 周五 21:43]
-**** DONE 按钮
-CLOSED: [2021-04-10 周六 18:27] SCHEDULED: <2021-04-09 周五 21:43>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-10 周六 18:27]
-**** DONE 文本
-CLOSED: [2021-04-12 周一 11:14] SCHEDULED: <2021-04-10 周六 18:27>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 11:14]
-**** DONE 定位器
-CLOSED: [2021-04-12 周一 12:07] SCHEDULED: <2021-04-12 周一 11:14>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 12:07]
-**** DONE 输入框
-CLOSED: [2021-04-12 周一 15:04] SCHEDULED: <2021-04-12 周一 12:07>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 15:04] \\
-  1.无法创建CUIEditText对象.
-  2.SetOverLimitTips()会出现无法找到condition库的错误.
-**** DONE 图片
-CLOSED: [2021-04-12 周一 15:19] SCHEDULED: <2021-04-12 周一 15:04>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 15:19]
-**** DONE 滚动框
-CLOSED: [2021-04-12 周一 16:48] SCHEDULED: <2021-04-12 周一 15:19>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 16:48]
-**** DONE 进度条
-CLOSED: [2021-04-12 周一 17:30] SCHEDULED: <2021-04-12 周一 16:48>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-
-**** DONE 抽象控件
-CLOSED: [2021-04-12 周一 19:13] SCHEDULED: <2021-04-12 周一 17:30>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 19:13] \\
-  1. 直接创建CTextObject对象会报错.
-**** DONE Layout
-CLOSED: [2021-04-12 周一 19:59] SCHEDULED: <2021-04-12 周一 19:13> \\
-1. 要设置SetItemSize
-:PROPERTIES:
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** DONE 自定义控件
-CLOSED: [2021-04-12 周一 21:15]
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h")
-:END:
-- State "DONE"       from "WAIT"       [2021-04-12 周一 21:15]
-DEADLINE: <2021-04-13 周二 11:35>
-**** DONE Ani3动画
-CLOSED: [2021-04-12 周一 20:31] SCHEDULED: <2021-04-12 周一 19:59>
-:PROPERTIES:
-:TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-04-12 周一 20:31]
-**** CANCELED Walker
-CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 20:31>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "CANCELED"   from "TODO"       [2021-04-12 周一 21:15] \\
-  缺少库文件walker
-**** CANCELED 小头像
-CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 21:15>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "CANCELED"   from "TODO"       [2021-04-12 周一 21:15] \\
-  缺少库文件touxiangnew
-**** CANCELED 特效库
-CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 21:15>
-:PROPERTIES:
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "CANCELED"   from "TODO"   [2021-04-12 周一 21:15] \\
-  缺少库文件effect
-**** CANCELED 物品框 
-CLOSED: [2021-04-12 周一 21:16] SCHEDULED: <2021-04-12 周一 21:15>
-:PROPERTIES:
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "CANCELED"   from "TODO"   [2021-04-12 周一 21:16] \\
-  缺少库文件dlgitem
-*** TODO UI大作业
-SCHEDULED: <2021-04-13 周二 21:15> DEADLINE: <2021-04-14 周三 21:00>
-:PROPERTIES:
-:TRIGGER+: parent todo!(DONE)
-:END:
-**** WAIT 完成第一个UI
-***** WAIT 其他功能
-****** TODO 一级界面自定义模板
-****** TODO 居中显示
-****** TODO ESC关闭
-****** TODO 屏幕内可拖动
-****** TODO 有两组按钮关联两个layer
-***** WAIT 完成Layer1
-****** TODO 富文本
-****** TODO 自定义物品框
-****** TODO 滚动框
-****** TODO 下拉组件框
-***** WAIT 完成Layer2
-****** TODO 3*3滚动列表
-**** TODO 完成第二个UI
-
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 学习 利为游戏引擎                                     :learn:
 CLOSED: [2021-04-04 周日 21:05] DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
@@ -538,6 +391,195 @@ CLOSED: [2021-04-08 周四 22:00] SCHEDULED: <2021-04-08 周四 21:34>
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 
+** DONE [#A] 学习UI基础                                             :learn:
+CLOSED: [2021-04-13 周二 22:49] DEADLINE: <2021-04-14 周三 21:00> SCHEDULED: <2021-04-09 周五 10:00>
+:PROPERTIES:
+:TYPE_ALL: basic advance
+:END:
+- State "DONE"       from "TODO"       [2021-04-13 周二 22:49]
+- State "DONE"       from "SCH"        [2021-04-12 周一 21:16]
+*** DONE UI编辑器入门
+CLOSED: [2021-04-09 周五 20:20] SCHEDULED: <2021-04-09 周五 10:50> DEADLINE: <2021-04-09 周五 21:00>
+:PROPERTIES:
+:TRIGGER:  olp("work.org" "Project/学习UI基础/基础控件学习/动态数据") todo!(TODO) scheduled!("++0h")
+:TYPE: basic
+:END:
+
+- State "DONE"       from "TODO"       [2021-04-09 周五 20:20]
+- State "DONE"       from "TODO"       [2021-04-09 周五 20:15]
+*** DONE 基础控件学习
+CLOSED: [2021-04-12 周一 19:59] DEADLINE: <2021-04-12 周一 11:35>
+:PROPERTIES:
+:TRIGGER:  olp("work.org" "Project/学习UI基础/自定义控件/Ani3动画") todo!(TODO) scheduled!("++0h")
+:TYPE: advance
+:END:
+- State "DONE"       from "WAIT"       [2021-04-12 周一 19:59]
+**** DONE 动态数据
+CLOSED: [2021-04-09 周五 20:21] SCHEDULED: <2021-04-09 周五 20:20>
+:PROPERTIES:
+:TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-09 周五 20:21]
+**** DONE 颜色层
+CLOSED: [2021-04-09 周五 21:43] SCHEDULED: <2021-04-09 周五 20:21>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-09 周五 21:43]
+**** DONE 按钮
+CLOSED: [2021-04-10 周六 18:27] SCHEDULED: <2021-04-09 周五 21:43>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-10 周六 18:27]
+**** DONE 文本
+CLOSED: [2021-04-12 周一 11:14] SCHEDULED: <2021-04-10 周六 18:27>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 11:14]
+**** DONE 定位器
+CLOSED: [2021-04-12 周一 12:07] SCHEDULED: <2021-04-12 周一 11:14>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 12:07]
+**** DONE 输入框
+CLOSED: [2021-04-12 周一 15:04] SCHEDULED: <2021-04-12 周一 12:07>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 15:04] \\
+  1.无法创建CUIEditText对象.
+  2.SetOverLimitTips()会出现无法找到condition库的错误.
+**** DONE 图片
+CLOSED: [2021-04-12 周一 15:19] SCHEDULED: <2021-04-12 周一 15:04>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 15:19]
+**** DONE 滚动框
+CLOSED: [2021-04-12 周一 16:48] SCHEDULED: <2021-04-12 周一 15:19>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 16:48]
+**** DONE 进度条
+CLOSED: [2021-04-12 周一 17:30] SCHEDULED: <2021-04-12 周一 16:48>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+
+**** DONE 抽象控件
+CLOSED: [2021-04-12 周一 19:13] SCHEDULED: <2021-04-12 周一 17:30>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 19:13] \\
+  1. 直接创建CTextObject对象会报错.
+**** DONE Layout
+CLOSED: [2021-04-12 周一 19:59] SCHEDULED: <2021-04-12 周一 19:13> \\
+1. 要设置SetItemSize
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 自定义控件
+CLOSED: [2021-04-12 周一 21:15]
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h")
+:END:
+- State "DONE"       from "WAIT"       [2021-04-12 周一 21:15]
+DEADLINE: <2021-04-13 周二 11:35>
+**** DONE Ani3动画
+CLOSED: [2021-04-12 周一 20:31] SCHEDULED: <2021-04-12 周一 19:59>
+:PROPERTIES:
+:TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-12 周一 20:31]
+**** CANCELED Walker
+CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 20:31>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "CANCELED"   from "TODO"       [2021-04-12 周一 21:15] \\
+  缺少库文件walker
+**** CANCELED 小头像
+CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 21:15>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "CANCELED"   from "TODO"       [2021-04-12 周一 21:15] \\
+  缺少库文件touxiangnew
+**** CANCELED 特效库
+CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 21:15>
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "CANCELED"   from "TODO"   [2021-04-12 周一 21:15] \\
+  缺少库文件effect
+**** CANCELED 物品框 
+CLOSED: [2021-04-12 周一 21:16] SCHEDULED: <2021-04-12 周一 21:15>
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "CANCELED"   from "TODO"   [2021-04-12 周一 21:16] \\
+  缺少库文件dlgitem
+*** DONE UI大作业
+CLOSED: [2021-04-13 周二 22:49] SCHEDULED: <2021-04-13 周二 11:00> DEADLINE: <2021-04-14 周三 21:00>
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:END:
+**** DONE 完成第一个UI
+CLOSED: [2021-04-13 周二 21:49]
+- State "DONE"       from "WAIT"       [2021-04-13 周二 21:49]
+***** DONE 其他功能
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "WAIT"       [2021-04-13 周二 15:58]
+****** DONE 一级界面自定义模板
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "TODO"       [2021-04-13 周二 15:58]
+****** DONE 居中显示
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "TODO"       [2021-04-13 周二 15:58]
+****** DONE ESC关闭
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "TODO"       [2021-04-13 周二 15:58]
+****** DONE 屏幕内可拖动
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "TODO"       [2021-04-13 周二 15:58]
+****** DONE 有两组按钮关联两个layer
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "TODO"       [2021-04-13 周二 15:58]
+***** DONE 完成Layer1
+CLOSED: [2021-04-13 周二 21:49]
+- State "DONE"       from "WAIT"       [2021-04-13 周二 21:49]
+****** DONE 富文本
+CLOSED: [2021-04-13 周二 15:58]
+- State "DONE"       from "TODO"       [2021-04-13 周二 15:58]
+****** CANCELED 自定义物品框
+CLOSED: [2021-04-13 周二 21:49]
+- State "CANCELED"   from "TODO"       [2021-04-13 周二 21:49] \\
+  代码库里缺少文件dlgitem
+****** DONE 滚动框
+CLOSED: [2021-04-13 周二 21:44]
+- State "DONE"       from "TODO"       [2021-04-13 周二 21:44]
+****** DONE 下拉组件框
+CLOSED: [2021-04-13 周二 21:44]
+- State "DONE"       from "TODO"       [2021-04-13 周二 21:44]
+***** DONE 完成Layer2
+CLOSED: [2021-04-13 周二 21:43]
+- State "DONE"       from "WAIT"       [2021-04-13 周二 21:43]
+****** DONE 3*3滚动列表
+CLOSED: [2021-04-13 周二 17:24]
+- State "DONE"       from "TODO"       [2021-04-13 周二 17:24]
+**** DONE 完成第二个UI
+CLOSED: [2021-04-13 周二 22:49]
+
+- State "DONE"       from "TODO"       [2021-04-13 周二 22:49] //
+  好像有点问题, 缩放的比例有点不对劲, 先这样
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
 ** 学习《Lua程序设计》                                       :learn:future:
