--- a/src/org/ref/liwei_engine.org
+++ b/src/org/ref/liwei_engine.org
@@ -47,3 +47,38 @@
 强引用非常容易导致进程阻塞
 *** spine对象最后调用的AddAnimation如果不循环的话, 会导致动画停止
 *** CTextObject和CUIEditText直接构造会报错
+** UI规范
+*** 命名
+**** 文件命名
+小写英文+下划线+数字, 不要有特殊字符, 长度不要超过四十, 目录不要超过两级.
+#+BEGIN_EXAMPLE
+Correct: info_001.ui, weibo_mine.py
+Wrong: info 001.ui weibo_Mine.py
+#+END_EXAMPLE
+**** 控件命名
+1. 不需要程序控制的控件(如背景层, 装饰图片等)可以使用默认命名, 可以随便更改, 删除.
+2. 需要程序控制的控件(如按钮, 列表等):
+   - 前缀统一m_开头
+   - 驼峰命名法
+   - 最后一个单词为控件类型, 如Layer, Text, Btn等
+#+begin_example
+Correct: m_SelectBar, m_IDScroll
+Wrong: m_happen, m_ID_Scroll
+#+end_example
+**** 多用英文, 少用拼音
+*** 层级管理
+**** UI文件命名层级
+以层级划分, 如玩法名/一级模块/二级模块.
+**** 控件父子的节点层级
+设计UI时尽量合理划分父子层级, 分而治之.(编辑器里alt+鼠标拖动即可将控件作为另一个节点的子节点)
+*** 常规知识
+**** 所有界面的根节点都是设备屏幕, 且其不能作为子节点
+**** 界面复用
+如果某一个控件需要多个相同的子控件, 不要复制多份相同的子控件, 而是通过程序创建多份子控件
+**** 动态数据的使用
+如果某个界面需要策划控制参数, 则可以使用动态数据保存参数
+**** 模板就是预定义好的一个界面
+**** 抽象控件可以将已经创建好的某个控件转为自定义控件
+**** 按F5可以快速重新加载
+**** 定位器用来定位子界面的位置, 无其他功能
+
