--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -1,8 +1,9 @@
 #+STARTUP: INDENT LOGDONE OVERVIEW
-#+TAGS: { Work: learn(l) work(w) }
-#+TAGS: { State: future(f) }
+#+TAGS: { Work : learn(l) work(w) }
+#+TAGS: { State : future(f) }
 #+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c@)
-#+COLUMNS: %25ITEM %TAGS %PRIORITY %TODO
+#+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
+#+PROPERTY: Effort_ALL 0 0:15 0:30 1:00 2:00 4:00 8:00
 
 
 * Inbox
@@ -41,13 +42,15 @@ SCHEDULED: <2021-04-14 周三 19:00 ++1d> DEADLINE: <2021-04-14 周三 21:20 ++1
 - State "DONE"       from "TODO"       [2021-03-31 周三 20:50]
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-04-14 周三 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-04-15 周四 19:00 ++1d>
 :PROPERTIES:
+:EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-13 周二 08:56]
+:LAST_REPEAT: [2021-04-14 周三 09:23]
 :END:
+- State "DONE"       from "TODO"       [2021-04-14 周三 09:23]
 - State "DONE"       from "TODO"       [2021-04-13 周二 08:56]
 - State "DONE"       from "TODO"       [2021-04-12 周一 13:25]
 - State "DONE"       from "TODO"       [2021-04-11 周日 19:31]
@@ -87,12 +90,13 @@ DEADLINE: <2021-04-18 周日 23:00 ++1w> SCHEDULED: <2021-05-02 周日 06:00 ++1
   ------------------------------------------------
   5. 自行车从家里邮过来之后组好, 送到车店保养.
 ** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-14 周三 19:00 ++1d/2d>
+SCHEDULED: <2021-04-15 周四 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-13 周二 09:24]
+:LAST_REPEAT: [2021-04-14 周三 09:23]
 :END:
+- State "DONE"       from "TODO"       [2021-04-14 周三 09:23]
 - State "DONE"       from "TODO"       [2021-04-13 周二 09:24]
 - State "DONE"       from "TODO"       [2021-04-12 周一 12:32]
 - State "DONE"       from "TODO"       [2021-04-11 周日 19:24]
@@ -104,8 +108,6 @@ SCHEDULED: <2021-04-14 周三 19:00 ++1d/2d>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
-** TODO [#A] 学习代码设计                                           :learn:
-DEADLINE: <2021-04-14 周三 21:00> SCHEDULED: <2021-04-14 周三 09:00>
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 学习org-edna                                          :learn:
 CLOSED: [2021-04-04 周日 11:46] DEADLINE: <2021-04-04 周日 12:00> SCHEDULED: <2022-04-03 周日 21:00>
@@ -220,6 +222,41 @@ DEADLINE: <2021-10-01 周五>
 
 
 * Project
+** SCH [#A] 学习代码设计                                            :learn:
+DEADLINE: <2021-04-15 周四 21:00> SCHEDULED: <2021-04-14 周三 09:00>
+*** DONE OOP要点
+CLOSED: [2021-04-14 周三 17:25] SCHEDULED: <2021-04-14 周三 10:30>
+:PROPERTIES:
+:TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:FILE: [[file:~/myproject/src/org/note/tech_note.org::*UML图][UML]]
+:END:
+:LOGBOOK:
+CLOCK: [2021-04-14 周三 16:44]--[2021-04-14 周三 17:09] =>  0:25
+CLOCK: [2021-04-14 周三 16:14]--[2021-04-14 周三 16:39] =>  0:25
+CLOCK: [2021-04-14 周三 15:39]--[2021-04-14 周三 16:04] =>  0:25
+CLOCK: [2021-04-14 周三 13:03]--[2021-04-14 周三 13:23] =>  0:20
+:END:
+- State "DONE"       from "TODO"       [2021-04-14 周三 17:25] \\
+  1. 组合大于继承
+  2. 可读大于精简
+  3. 注释诠释用法
+  4. 命名表明含义
+  5. 合理控制深度
+*** TODO 网络交互
+SCHEDULED: <2021-04-14 周三 17:25>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2021-04-14 周三 19:39]--[2021-04-14 周三 20:04] =>  0:25
+CLOCK: [2021-04-14 周三 19:04]--[2021-04-14 周三 19:29] =>  0:25
+:END:
+*** WAIT 观察者+信号
+*** WAIT MVC框架
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:END:
+
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 学习 利为游戏引擎                                     :learn:
 CLOSED: [2021-04-04 周日 21:05] DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
