--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -1,12 +1,13 @@
-#+STARTUP: INDENT LOGDONE OVERVIEW
+#+STARTUP: INDENT LOGDONE OVERVIEW NOLOGREFILE
 #+TAGS: { Work : learn(l) work(w) }
 #+TAGS: { State : future(f) }
 #+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c@)
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
-#+PROPERTY: Effort_ALL 0 0:15 0:30 1:00 2:00 4:00 8:00
+#+PROPERTY: EffORT_all 0 0:15 0:30 1:00 2:00 4:00 8:00
 
 
 * Inbox
+** WAIT 项目调试工具                                                :learn:
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
 SCHEDULED: <2021-04-19 周一 09:00 ++1w> DEADLINE: <2021-04-19 周一 12:00 ++1w>
@@ -18,13 +19,13 @@ SCHEDULED: <2021-04-19 周一 09:00 ++1w> DEADLINE: <2021-04-19 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-15 周四 19:00 ++1d> DEADLINE: <2021-04-15 周四 21:20 ++1d>
+SCHEDULED: <2021-04-17 周六 19:00 ++1d> DEADLINE: <2021-04-17 周六 21:20 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-14 周三 23:01]
+:LAST_REPEAT: [2021-04-16 周五 21:55]
 :END:
-
-
+- State "DONE"       from "TODO"       [2021-04-16 周五 21:55]
+- State "DONE"       from "TODO"       [2021-04-15 周四 22:01]
 - State "DONE"       from "TODO"       [2021-04-14 周三 23:01]
 - State "DONE"       from "TODO"       [2021-04-13 周二 22:52]
 - State "DONE"       from "TODO"       [2021-04-12 周一 21:26]
@@ -44,13 +45,15 @@ SCHEDULED: <2021-04-15 周四 19:00 ++1d> DEADLINE: <2021-04-15 周四 21:20 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-15 周四 19:00 ++1d>
+SCHEDULED: <2021-04-17 周六 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-14 周三 09:23]
+:LAST_REPEAT: [2021-04-16 周五 09:50]
 :END:
+- State "DONE"       from "TODO"       [2021-04-16 周五 09:50]
+- State "DONE"       from "TODO"       [2021-04-15 周四 09:30]
 - State "DONE"       from "TODO"       [2021-04-14 周三 09:23]
 - State "DONE"       from "TODO"       [2021-04-13 周二 08:56]
 - State "DONE"       from "TODO"       [2021-04-12 周一 13:25]
@@ -69,34 +72,16 @@ SCHEDULED: <2021-04-15 周四 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 归档并回顾一周的计划                                   :learn:
-DEADLINE: <2021-04-18 周日 23:00 ++1w> SCHEDULED: <2021-05-02 周日 06:00 ++1w>
-:PROPERTIES:
-:STYLE:    habit
-:LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-04-11 周日 19:36]
-:END:
-- State "DONE"       from "TODO"       [2021-04-11 周日 19:36] \\
-  1. org-mode大概学了50%左右, 确实是一个重量级的GTD工具
-  2. 完成了利为引擎的所有小作业
-  3. 完成了一部分UI编程的作业
-  ------------------------------------------------
-  1. 顺利搬家到大壮名城, 离公司很近
-  2. 家具基本置办齐全, 电脑相关的东西以后再考虑
-- State "DONE"       from "TODO"       [2021-04-04 周日 19:35] \\
-  1. 对使用org-mode进行gtd进行了较为充分的学习, 基本掌握了用法.
-  2. 重新读了一遍《python核心编程》, 加深了对py一些基本概念的理解.
-  3. 完成了python的入职考试, python150题.
-  4. 初步学习了一下利为引擎, 当然除了开始的几章还有例子可以参考, 后面写的太简略了.
-  ------------------------------------------------
-  5. 自行车从家里邮过来之后组好, 送到车店保养.
 ** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-15 周四 19:00 ++1d/2d>
+SCHEDULED: <2021-04-18 周日 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-14 周三 09:23]
+:LAST_REPEAT: [2021-04-16 周五 20:33]
 :END:
+- State "DONE"       from "TODO"       [2021-04-16 周五 20:33]
+- State "DONE"       from "TODO"       [2021-04-16 周五 09:05]
+- State "DONE"       from "TODO"       [2021-04-15 周四 09:43]
 - State "DONE"       from "TODO"       [2021-04-14 周三 09:23]
 - State "DONE"       from "TODO"       [2021-04-13 周二 09:24]
 - State "DONE"       from "TODO"       [2021-04-12 周一 12:32]
@@ -109,6 +94,8 @@ SCHEDULED: <2021-04-15 周四 19:00 ++1d/2d>
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
+** TODO [#A] 资源类型学习                                           :learn:
+SCHEDULED: <2021-04-17 周六 13:00>
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 学习org-edna                                          :learn:
 CLOSED: [2021-04-04 周日 11:46] DEADLINE: <2021-04-04 周日 12:00> SCHEDULED: <2022-04-03 周日 21:00>
@@ -223,46 +210,35 @@ DEADLINE: <2021-10-01 周五>
 
 
 * Project
-** SCH [#A] 学习代码设计                                            :learn:
-DEADLINE: <2021-04-15 周四 21:00> SCHEDULED: <2021-04-14 周三 09:00>
-*** DONE OOP要点
-CLOSED: [2021-04-14 周三 17:25] SCHEDULED: <2021-04-14 周三 10:30>
+** SCH 客户端常用功能                                               :learn:
+DEADLINE: <2021-04-20 周二 21:00> SCHEDULED: <2021-04-16 周五 17:10>
+:PROPERTIES:
+:EFFORT: 4:00
+:END:
+*** DONE 文本链接功能
+CLOSED: [2021-04-16 周五 17:36] SCHEDULED: <2021-04-16 周五 17:10>
 :PROPERTIES:
 :TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:FILE: [[file:~/myproject/src/org/note/tech_note.org::*UML图][UML]]
 :END:
+- State "DONE"       from "TODO"       [2021-04-16 周五 17:36]
 :LOGBOOK:
-CLOCK: [2021-04-14 周三 16:44]--[2021-04-14 周三 17:09] =>  0:25
-CLOCK: [2021-04-14 周三 16:14]--[2021-04-14 周三 16:39] =>  0:25
-CLOCK: [2021-04-14 周三 15:39]--[2021-04-14 周三 16:04] =>  0:25
-CLOCK: [2021-04-14 周三 13:03]--[2021-04-14 周三 13:23] =>  0:20
+CLOCK: [2021-04-16 周五 17:11]--[2021-04-16 周五 17:36] =>  0:25
 :END:
-- State "DONE"       from "TODO"       [2021-04-14 周三 17:25] \\
-  1. 组合大于继承
-  2. 可读大于精简
-  3. 注释诠释用法
-  4. 命名表明含义
-  5. 合理控制深度
-*** DONE 网络交互
-CLOSED: [2021-04-14 周三 22:57] SCHEDULED: <2021-04-14 周三 17:25>
+*** TODO 导表工具
+SCHEDULED: <2021-04-17 周六 17:36>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-- State "DONE"       from "TODO"       [2021-04-14 周三 22:57]
-:LOGBOOK:
-CLOCK: [2021-04-14 周三 19:39]--[2021-04-14 周三 20:04] =>  0:25
-CLOCK: [2021-04-14 周三 19:04]--[2021-04-14 周三 19:29] =>  0:25
-:END:
-*** TODO 观察者+信号
-SCHEDULED: <2021-04-15 周四 22:57>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** WAIT MVC框架
+*** WAIT 常用工具 [0/2]
 :PROPERTIES:
 :TRIGGER+: parent todo!(DONE)
 :END:
-
+- [ ] 循环引用和Functor
+- [ ] 引擎IO和文件IO
+** WAIT 大作业                                                      :learn:
+*** 阅读代码规范
+*** 搭建环境
+*** 完成商城页面制作
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 学习 利为游戏引擎                                     :learn:
 CLOSED: [2021-04-04 周日 21:05] DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
@@ -379,7 +355,7 @@ CLOSED: [2021-03-29 周一 17:41] DEADLINE: <2021-03-31 周三 21:00>
 **** DONE 学习8-11章
 CLOSED: [2021-03-30 周二 21:09] DEADLINE: <2021-03-30 周二 21:00>
 **** DONE 学习12-14章
-CLOSED: [2021-03-31 周三 21:05] DEADLINE: <2021-03-31 周三 21:20>
+CLOSED: [2021-03-31 周三 21:05] DEADLINE: <2021-03-31 周三 21:20>
 :LOGBOOK:
 CLOCK: [2021-03-31 周三 14:21]--[2021-03-31 周三 14:46] =>  0:25
 CLOCK: [2021-03-31 周三 13:55]--[2021-03-31 周三 14:15] =>  0:20
@@ -432,6 +408,71 @@ CLOSED: [2021-04-08 周四 22:00] SCHEDULED: <2021-04-08 周四 21:34>
 :BLOCKER: previous-sibling
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+
+** DONE [#A] 学习代码设计                                           :learn:
+CLOSED: [2021-04-16 周五 16:28] DEADLINE: <2021-04-15 周四 21:00> SCHEDULED: <2021-04-14 周三 09:00>
+- State "DONE"       from "SCH"        [2021-04-16 周五 16:28]
+*** DONE OOP要点
+CLOSED: [2021-04-14 周三 17:25] SCHEDULED: <2021-04-14 周三 10:30>
+:PROPERTIES:
+:TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:FILE: [[file:~/myproject/src/org/note/tech_note.org::*UML图][UML]]
+:END:
+:LOGBOOK:
+CLOCK: [2021-04-14 周三 16:44]--[2021-04-14 周三 17:09] =>  0:25
+CLOCK: [2021-04-14 周三 16:14]--[2021-04-14 周三 16:39] =>  0:25
+CLOCK: [2021-04-14 周三 15:39]--[2021-04-14 周三 16:04] =>  0:25
+CLOCK: [2021-04-14 周三 13:03]--[2021-04-14 周三 13:23] =>  0:20
+:END:
+- State "DONE"       from "TODO"       [2021-04-14 周三 17:25] \\
+  1. 组合大于继承
+  2. 可读大于精简
+  3. 注释诠释用法
+  4. 命名表明含义
+  5. 合理控制深度
+*** DONE 网络交互
+CLOSED: [2021-04-14 周三 22:57] SCHEDULED: <2021-04-14 周三 17:25>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-14 周三 22:57]
+:LOGBOOK:
+CLOCK: [2021-04-14 周三 19:39]--[2021-04-14 周三 20:04] =>  0:25
+CLOCK: [2021-04-14 周三 19:04]--[2021-04-14 周三 19:29] =>  0:25
+:END:
+*** DONE 观察者+信号
+CLOSED: [2021-04-15 周四 15:20] SCHEDULED: <2021-04-15 周四 09:50>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-15 周四 15:20]
+:LOGBOOK:
+CLOCK: [2021-04-15 周四 14:50]--[2021-04-15 周四 15:15] =>  0:25
+:END:
+*** DONE MVC框架
+CLOSED: [2021-04-16 周五 16:28] SCHEDULED: <2021-04-15 周四 15:20>
+:PROPERTIES:
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2021-04-16 周五 16:13]--[2021-04-16 周五 16:28] =>  0:15
+CLOCK: [2021-04-16 周五 15:38]--[2021-04-16 周五 16:03] =>  0:25
+CLOCK: [2021-04-16 周五 15:08]--[2021-04-16 周五 15:33] =>  0:25
+CLOCK: [2021-04-16 周五 14:38]--[2021-04-16 周五 15:03] =>  0:25
+CLOCK: [2021-04-16 周五 14:08]--[2021-04-16 周五 14:33] =>  0:25
+CLOCK: [2021-04-16 周五 13:33]--[2021-04-16 周五 13:58] =>  0:25
+CLOCK: [2021-04-16 周五 10:53]--[2021-04-16 周五 11:18] =>  0:25
+CLOCK: [2021-04-16 周五 10:23]--[2021-04-16 周五 10:48] =>  0:25
+CLOCK: [2021-04-16 周五 09:53]--[2021-04-16 周五 10:18] =>  0:25
+CLOCK: [2021-04-15 周四 20:35]--[2021-04-15 周四 21:00] =>  0:25
+CLOCK: [2021-04-15 周四 20:05]--[2021-04-15 周四 20:30] =>  0:25
+CLOCK: [2021-04-15 周四 19:35]--[2021-04-15 周四 20:00] =>  0:25
+CLOCK: [2021-04-15 周四 17:12]--[2021-04-15 周四 17:37] =>  0:25
+CLOCK: [2021-04-15 周四 16:22]--[2021-04-15 周四 16:47] =>  0:25
+CLOCK: [2021-04-15 周四 15:52]--[2021-04-15 周四 16:17] =>  0:25
+CLOCK: [2021-04-15 周四 15:20]--[2021-04-15 周四 15:45] =>  0:25
 :END:
 
 ** DONE [#A] 学习UI基础                                             :learn:
